--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-javascript",
   "version": "1.0.0",
   "type": "module",
+  "homepage": "https://Ad-abhinav.github.io/Background-color-changer",
   "description": "React TypeScript on Replit, using Vite bundler",
   "scripts": {
     "dev": "vite",
